--- a/index.html
+++ b/index.html
@@ -36,23 +36,27 @@
           <h1 class="title is-1 publication-title">RAMBO: RL-augmented Model-based Whole-body Control for Loco-manipulation</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://jin-cheng.me">Jin Cheng</a><sup>1</sup>,</span>
+              <a href="https://jin-cheng.me">Jin Cheng</a>,</span>
             <span class="author-block">
-              <a href="https://donghok.me">Dongho Kang</a><sup>1</sup>,</span>
+              <a href="https://donghok.me">Dongho Kang</a>,</span>
             <span class="author-block">
-              <a href="https://www.zhaw.ch/en/about-us/person/fadi">Gabriele Fadini</a><sup>1</sup>,
+              <a href="https://www.zhaw.ch/en/about-us/person/fadi">Gabriele Fadini</a>,
             </span>
             <span class="author-block">
-              <a href="https://www.gshi.me">Guanya Shi</a><sup>2</sup>,
+              <a href="https://www.gshi.me">Guanya Shi</a>,
             </span>
             <span class="author-block">
-              <a href="https://crl.ethz.ch/people/coros/index.html">Stelian Coros</a><sup>1</sup>,
+              <a href="https://crl.ethz.ch/people/coros/index.html">Stelian Coros</a>
             </span>
           </div>
 
-          <div class="is-size-5 publication-authors">
-            <span class="author-block"><sup>1</sup>ETH Zurich,</span>
-            <span class="author-block"><sup>2</sup>Carnegie Mellon University</span>
+          <div class="institution-logos">
+            <img src="./static/images/eth.svg" alt="ETH Zurich Logo" class="logo-eth">
+            <img src="./static/images/cmu.svg" alt="Carnegie Mellon University Logo" class="logo-cmu">
+          </div>
+
+          <div class="is-size-4 publication-authors" style="margin-bottom: 0.5cm;">
+            In submission
           </div>
 
           <div class="column has-text-centered">
@@ -87,24 +91,15 @@
                 </a>
               </span>
               <!-- Code Link. -->
-              <!-- <span class="link-block">
-                <a href="https://github.com/google/nerfies"
+              <span class="link-block">
+                <a href="https://github.com/catachiii/rambo"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
                   </span>
                   <span>Code</span>
                   </a>
-              </span> -->
-              <!-- Dataset Link. -->
-              <!-- <span class="link-block">
-                <a href="https://github.com/google/nerfies/releases/tag/0.1"
-                   class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                      <i class="far fa-images"></i>
-                  </span>
-                  <span>Data</span>
-                  </a> -->
+              </span>
             </div>
 
           </div>
@@ -127,6 +122,13 @@
         <i class="fab fa-github"></i>
       </a> -->
     </div>
+    <div class="lab-logos">
+      <img src="./static/images/CRL-Logo2.svg" alt="CRL" class="lab-logo">
+      <img src="./static/images/lecar.png" alt="LeCAR" class="lab-logo">
+    </div>
+
+    <hr style="width: 60%; margin: 2rem auto;">
+
     <div class="columns is-centered">
       <div class="column is-8">
         <div class="content">
