--- a/index.html
+++ b/index.html
@@ -109,7 +109,116 @@
   </div>
 </section>
 
+<div class="video-container mt-5 mb-5">
+  <video controls>
+    <source src="./static/videos/rambo.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+</div>
 
+<div class="abstract-box mt-5">
+  <h2 class="title is-4 has-text-centered">Abstract</h2>
+  <div class="content has-text-justified">
+    <p>Loco-manipulation, physical interaction of various objects that is concurrently coordinated with locomotion, remains a major challenge for legged robots due to the need for both precise end-effector control and robustness to unmodeled dynamics. While model-based controllers provide precise planning via online optimization, they are limited by model inaccuracies. In contrast, learning-based methods offer robustness, but they struggle with precise modulation of interaction forces.
+    </p>
+    <p>      We introduce <strong>RAMBO</strong>, a hybrid framework that integrates model-based whole-body control within a feedback policy trained with reinforcement learning. The model-based module generates feedforward torques by solving a quadratic program, while the policy provides feedback corrective terms to enhance robustness. We validate our framework on a quadruped robot across a diverse set of real-world loco-manipulation tasks, such as pushing a shopping cart, balancing a plate, and holding soft objects, in both quadrupedal and bipedal walking. Our experiments demonstrate that RAMBO enables precise manipulation capabilities while achieving robust and dynamic locomotion.
+    </p>
+  </div>
+</div>
+
+<div class="method-overview section">
+  <h2 class="title is-4 has-text-centered"> Overview</h2>
+  <div class="container is-max-desktop has-text-justified">
+    <div class="has-text-centered">
+      <img src="./static/images/rambo_hl3.png" alt="Method Diagram" class="method-diagram">
+    </div>
+    <p class="mb-5">
+Overview of the RAMBO architecture. It consists of three core components: (1) a motion reference generator, (2) a WBC module that computes feedforward joint torques, and (3) an RL policy that generates feedback corrections to both WBC input parameters and motion reference.
+ </p>
+  </div>
+</div>
+<section class="section">
+  <div class="container">
+    <div class="columns is-centered">
+      <div class="column is-full-width">
+        <h2 class="title is-2" style="text-align: center; padding-bottom: 10px;">Bipedal Skills</h2>
+        <tr>
+          <td>
+
+            <div class="columns"> <!-- Correct Bulma structure -->
+              <div class="column">
+                <h3 class="title is-3" style="text-align: center; margin-bottom: 10px; font-size: x-large;">Dice holding</h3>
+                <video autoplay muted loop playsinline controls src="./static/videos/dice.m4v" width="100%" style="border-radius:10px;"></video>
+              </div>
+              <div class="column">
+                <h3 class="title is-3" style="text-align: center; margin-bottom: 10px; font-size: x-large;">Cart pushing</h3>
+                <video autoplay muted loop playsinline controls src="./static/videos/cart1.m4v" width="100%" style="border-radius:10px;"></video>
+              </div>
+            </div>
+            <br>
+
+          </td>
+        </tr>
+      </div>
+    </div>
+    <div class="columns is-centered">
+      <div class="column is-full-width">
+        <h2 class="title is-2" style="text-align: center; padding-bottom: 10px;">Quadrupedal Skills</h2>
+        <tr>
+          <td>
+
+            <div class="columns"> <!-- Correct Bulma structure -->
+              <div class="column">
+                <h3 class="title is-3" style="text-align: center; margin-bottom: 10px; font-size: x-large;">Plate holding</h3>
+                <video autoplay muted loop playsinline controls src="./static/videos/plate_walk.m4v" width="100%" style="border-radius:10px;"></video>
+              </div>
+              <div class="column">
+                <h3 class="title is-3" style="text-align: center; margin-bottom: 10px; font-size: x-large;">Sponge Pushing</h3>
+                <video autoplay muted loop playsinline controls src="./static/videos/sponge.m4v" width="100%" style="border-radius:10px;"></video>
+              </div>
+            </div>
+            <br>
+          </td>
+        </tr>
+      </div>
+    </div>
+
+    <div class="columns is-centered">
+      <div class="column is-full-width">
+        <h2 class="title is-2" style="text-align: center; padding-bottom: 10px;">Compliance</h2>
+        <tr>
+          <td>
+
+            <div class="columns"> <!-- Correct Bulma structure -->
+              <div class="column">
+                <h3 class="title is-3" style="text-align: center; margin-bottom: 10px; font-size: x-large;">Hand shaking while standing</h3>
+                <video autoplay muted loop playsinline controls src="./static/videos/shake_stand.m4v" width="100%" style="border-radius:10px;"></video>
+              </div>
+              <div class="column">
+                <h3 class="title is-3" style="text-align: center; margin-bottom: 10px; font-size: x-large;">Hand shaking while walking</h3>
+                <video autoplay muted loop playsinline controls src="./static/videos/shake_walk.m4v" width="100%" style="border-radius:10px;"></video>
+              </div>
+            </div>
+            <br>
+          </td>
+        </tr>
+      </div>
+    </div>
+  </div>
+</section>
+
+<div class="method-overview section">
+  <h2 class="title is-4 has-text-centered"> Method</h2>
+  <div class="container is-max-desktop has-text-justified">
+     <div class="has-text-centered">
+      <img src="./static/images/rambo_main3.png" alt="Method Diagram" class="method-diagram2">
+    </div>
+    <p class="mb-5">
+Detailed architecture of the RAMBO control framework. The desired base velocity and EE positions are used to generate a kinematic motion reference, which is sent to the policy and whole-body control module. The whole-body control module also takes the desired EE force to compute the feedforward joint torques. The learned policy provides corrective feedback to the base acceleration and joint position targets, enabling robust control under modeling errors and dynamic disturbances. </p>
+
+  </div>
+
+</div>
 
 <footer class="footer">
   <div class="container">
