updated the logo to fix mobile

--- a/index.html
+++ b/index.html
@@ -50,9 +50,13 @@
             </span>
           </div>
 
-          <div class="institution-logos">
-            <img src="./static/images/eth.svg" alt="ETH Zurich Logo" class="logo-eth">
-            <img src="./static/images/cmu.svg" alt="Carnegie Mellon University Logo" class="logo-cmu">
+          <div class="columns is-mobile is-centered is-vcentered mt-3 mb-3 is-multiline">
+            <div class="column is-narrow has-text-centered">
+              <img src="./static/images/eth.svg" alt="ETH Zurich Logo" class="logo-eth">
+            </div>
+            <div class="column is-narrow has-text-centered">
+              <img src="./static/images/cmu.svg" alt="CMU Logo" class="logo-cmu">
+            </div>
           </div>
 
           <div class="is-size-4 publication-authors" style="margin-bottom: 0.5cm;">
